--- a/server/rs/Cargo.toml
+++ b/server/rs/Cargo.toml
@@ -10,7 +10,7 @@ crate-type = ["staticlib"]
 
 [dependencies]
 arboard = "3.4.1"
-enigo = { version = "0.6.1", features = ["wayland",  "libei_tokio", "xdo", "x11rb"] }
+enigo = { version = "0.6.1" }
 env_logger = "0.11"
 log = "0.4"
 
