--- a/server_gui/pubspec.yaml
+++ b/server_gui/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   qr_flutter: ^4.1.0
   fluent_ui: ^4.12.0
   intl: any
+  flutter_markdown: ^0.7.4+1
 
   # For networking and data parsing
   http: ^1.2.1
@@ -85,6 +86,7 @@ flutter:
     - assets/default.conf
     - assets/app_icon.png
     - assets/app_icon.ico
+    - lib/help/udev_setup.md
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
