--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,7 +82,8 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y \
             cmake ninja-build clang pkg-config \
-            libgtk-3-dev libxdo-dev libxkbcommon-dev libxkbcommon-x11-dev libwayland-dev libayatana-appindicator3-dev libfuse2
+            libgtk-3-dev libxdo-dev libxkbcommon-dev libxkbcommon-x11-dev libwayland-dev libayatana-appindicator3-dev libfuse2 \
+            imagemagick
           if [ "${ARCH}" = "arm64" ]; then
             rustup target add aarch64-unknown-linux-gnu
           else
