--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -319,7 +319,7 @@ jobs:
             VENV_PYTHON="$VENV_DIR/bin/python"
           fi
           "$VENV_PYTHON" -m pip install --upgrade pip
-          "$VENV_PYTHON" -m pip install cos-python-sdk-v5 boto3
+          "$VENV_PYTHON" -m pip install cos-python-sdk-v5 boto3 tencentcloud-sdk-python
           echo "UPLOAD_PYTHON=$VENV_PYTHON" >> "$GITHUB_ENV"
 
       - name: Upload latest packages to Tencent COS
@@ -380,4 +380,31 @@ jobs:
             CMD+=(--endpoint "$CLOUDFLARE_R2_ENDPOINT")
           fi
           "${CMD[@]}"
+
+  purge-cdn:
+    name: Purge CDN Cache
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.ref_type == 'tag' && !contains(github.ref_name, 'alpha') && !contains(github.ref_name, 'beta') && !contains(github.ref_name, 'rc')
+    environment: MAC
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install tencentcloud-sdk-python
+
+      - name: Purge Tencent CDN cache
+        env:
+          TENCENTCLOUD_SECRET_ID: ${{ secrets.COS_SECRET_ID }}
+          TENCENTCLOUD_SECRET_KEY: ${{ secrets.COS_SECRET_KEY }}
+        run: |
+          python scripts/purge_cdn_urls.py
 
